tests/aether/negative/expect_AE0201_shared_after_mut.aether
// A shared borrow taken while a mutable borrow is still LIVE must be rejected.
//
// P6.3 — the borrow checker is now non-lexical: `a`'s `&mut x` lives until its
// last use (`*a = 1`), which is AFTER `b = &x` is taken. So the shared borrow
// `b` overlaps the live mutable borrow `a` — the checker emits AE0201 "cannot
// borrow `x` as shared: already mutably borrowed".
fn main() -> i64 {
    let mut x: i64 = 5;
    let a = &mut x;
    let b = &x;
    let c: i64 = *b;
    *a = 1;
    c
}
